--- a/render.yaml
+++ b/render.yaml
@@ -2,28 +2,26 @@ services:
   - type: worker
     name: your-crush-userbot
     env: node
+    region: singapore  # or oregon, frankfurt, etc
     buildCommand: npm install
     startCommand: npm start
+    autoDeploy: true
     envVars:
       - key: NODE_ENV
         value: production
-      - key: API_ID
-        sync: false
-      - key: API_HASH
-        sync: false
-      - key: SESSION_STRING
-        sync: false
-      - key: PHONE_NUMBER
-        sync: false
+      - key: LOG_LEVEL
+        value: info
       - key: BOT_NAME
         value: "𝗬𝗢𝗨𝗥 𝗖𝗥𝗨𝗦𝗛 ⟵𝗼_𝟬"
-      - key: OWNER_ID
-        sync: false
       - key: MAX_ACTIONS_PER_MINUTE
         value: "50"
       - key: TYPING_MIN_DELAY
         value: "800"
       - key: TYPING_MAX_DELAY
         value: "4000"
-      - key: LOG_LEVEL
-        value: info
+      # Add these in Render Dashboard:
+      # - API_ID (from my.telegram.org)
+      # - API_HASH (from my.telegram.org)
+      # - SESSION_STRING (from node session.js)
+      # - PHONE_NUMBER (your number)
+      # - OWNER_ID (your Telegram ID)
