--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,26 @@
 services:
-  - type: worker
+  - type: web  # Worker থেকে Web এ পরিবর্তন
     name: your-crush-userbot
     env: node
-    region: singapore  # or oregon, frankfurt, etc
+    region: singapore
     buildCommand: npm install
     startCommand: npm start
     autoDeploy: true
+    healthCheckPath: /health  # Web Service এর জন্য health check path দিতে হবে
     envVars:
       - key: NODE_ENV
         value: production
       - key: LOG_LEVEL
         value: info
       - key: BOT_NAME
-        value: "𝗬𝗢𝗨𝗥 𝗖𝗥𝗨𝗦𝗛 ⟵𝗼_𝟬"
+        value: "𝗬𝗢𝗨𝗅 𝗖𝗥𝗨𝗦𝗛 ⟵𝗼_𝟬"
       - key: MAX_ACTIONS_PER_MINUTE
         value: "50"
       - key: TYPING_MIN_DELAY
         value: "800"
       - key: TYPING_MAX_DELAY
         value: "4000"
-      # Add these in Render Dashboard:
-      # - API_ID (from my.telegram.org)
-      # - API_HASH (from my.telegram.org)
-      # - SESSION_STRING (from node session.js)
-      # - PHONE_NUMBER (your number)
-      # - OWNER_ID (your Telegram ID)
+      - key: PORT
+        value: "10000"  # Web Service এর জন্য PORT দিতে হবে
+      # Render Dashboard থেকে manually set করতে হবে:
+      # API_ID, API_HASH, SESSION_STRING, OWNER_ID
