--- a/data/config.json
+++ b/data/config.json
@@ -4,14 +4,15 @@
     "reply_in_channels": false,
     "use_borders": true,
     "max_actions_per_minute": 50,
-    "typing_min_delay": 800,
-    "typing_max_delay": 4000,
+    "typing_delay": 1000,
     "log_level": "info",
     "auto_react": true,
+    "typing_effect": true,
     "auto_voice": true,
     "auto_sticker": true,
-    "auto_meme": true,
-    "typing_effect": true
+    "auto_emoji": true,
+    "voice_reply": true,
+    "sticker_reply": true
   },
   "reactions": ["👍", "❤️", "🔥", "😂", "😮", "😢", "😡", "🎉", "🤔", "👏"]
 }
